# polyrust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  refactor_report.md
.github/workflows/: ci.yml
graphify-out/: GRAPH_REPORT.md  cost.json  graph.json  manifest.json
src/: anchor.rs  auth.rs  binance.rs  config.rs  feed.rs  gamma.rs  inventory.rs  lib.rs  logline.rs  main.rs  market.rs  orders.rs  runtime.rs  signal.rs  signing.rs  state.rs  submit.rs  types.rs  user.rs  ws.rs
tests/: binance_parser.rs  golden_canonical.rs  market_state.rs  runtime_buy.rs  runtime_buy_submit.rs  runtime_core.rs  runtime_entry_gates.rs  runtime_sell_submit.rs  signal_decision.rs
