[package]
name = "minirust"
version = "0.0.1"
edition = "2021"
publish = false
description = "Rust port of the minimal Polymarket/Binance bot. Phase 1+2: types and order-body canonicalization."

[lib]
name = "minirust"
path = "src/lib.rs"

[dependencies]
# Phase 1+2 (types + canonical body math): pure stdlib.
# Phase 3a (L2 auth): hmac/sha2/base64 below.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Phase 3b (order construction + EIP-712 signing): use the official
# Polymarket Rust SDK rather than reimplementing the schema. The SDK owns
# the canonical Order struct, the EIP-712 domain separator, and the
# signature recovery path used by the on-chain CTFExchange contract.
# Reimplementing that schema would be a monkey job.
polymarket_client_sdk_v2 = { version = "0.6.0-canary.1", default-features = false, features = ["clob"] }
# Pin alloy to the SDK's resolved version so we share a single c-kzg link.
alloy = { version = "=1.6.3", default-features = false, features = [
    "signer-local",
    "signers",
] }
rust_decimal = "1"
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[dev-dependencies]
# Phase 1+2 tests are pure stdlib.

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
