[package]
name = "minirust"
version = "0.0.1"
edition = "2021"
publish = false
description = "Rust port of the minimal Polymarket/Binance bot. Phase 1+2: types and order-body canonicalization."

[lib]
name = "minirust"
path = "src/lib.rs"

[dependencies]
# Phase 1+2 (types + canonical body math): pure stdlib.
# Phase 3a (L2 auth): hmac/sha2/base64.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Phase 3b (EIP-712 order signing): primitives only. The SDK's order
# builder calls tick_size / fee_rate / version over the network *before*
# producing a signable body — that defeats the entire pre-signing
# architecture (Binance tick → cached signed body → submit) the plan
# is built around. We reference the SDK source for the schema (the V2
# Order struct, the EIP-712 domain separator constants, the
# verifying-contract addresses) and compute the digest + signature
# locally and synchronously. The schema is fixed by the on-chain
# CTFExchange contract — copying it from a Rust crate is reading a
# datasheet, not a monkey job.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha3 = { version = "0.10", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
# Phase 1+2 tests are pure stdlib.

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
