[package]
name = "minirust"
version = "0.0.1"
edition = "2024"
publish = false
description = "Minimal Rust Polymarket/Binance HFT runtime."

[lib]
name = "minirust"
path = "src/lib.rs"

[dependencies]
# Types + canonical body math: pure stdlib.
# L2 auth: hmac/sha2/base64.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# EIP-712 order signing: primitives only. The SDK's order
# builder calls tick_size / fee_rate / version over the network *before*
# producing a signable body — that defeats the entire pre-signing
# architecture (Binance tick → cached signed body → submit) the plan
# is built around. We reference the SDK source for the schema (the V2
# Order struct, the EIP-712 domain separator constants, the
# verifying-contract addresses) and compute the digest + signature
# locally and synchronously. The schema is fixed by the on-chain
# CTFExchange contract — copying it from a Rust crate is reading a
# datasheet, not a monkey job.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
sha3 = { version = "0.10", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

# Direct HTTP submit. Reqwest is kept only for the first live-equivalent
# runtime slice; replacing it with a lower-level client requires measured
# latency evidence, not aesthetic minimalism.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "http2",
    "json",
    "stream",
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",   # Delivered by DeepSeek — mpsc channel for feed loop tests.
] }
bytes = "1"

# Delivered by DeepSeek — WebSocket feed IO deps for all 3 feeds.
# Traces to: Python websockets.connect() in market_ws.py, binance_sbe_listener.py,
# user_channel_ws.py.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
# Delivered by DeepSeek — StreamExt + SinkExt for WS read/write in feed loops.
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
